# emendis

./: .gitignore  Makefile  README.md  alembic.ini  cli.py  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 868252576eae_initial.py  ea8519c95162_initial.py
emendis/: auth.py  cli.py  db.py  main.py  models.py  schemas.py
tests/: conftest.py  test_api.py  test_data.csv
